Fixed: [Protective Order Guided Assist] Letters change on the screen – they jump around, if you click on the middle option #966

--- a/Web/Access2Justice.Web/ClientApp/src/style-guide.css
+++ b/Web/Access2Justice.Web/ClientApp/src/style-guide.css
@@ -376,8 +376,8 @@ input[type="checkbox"]:checked ~ .check::before {
 
   p,
   .p {
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 15px;
+    line-height: 23px;
   }
 
   .ps {
